Add dev branch alias

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-main": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "Flattens\\ServiceProvider"
