--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "statamic/cms": "3.1.*"
+        "statamic/cms": "3.1.*",
+        "facade/ignition-contracts": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.18",
